Add missing GC parameters